tests/expectations/compiler/mappings/global_shadow_mapping_fail.out
DCE_ENABLED:
Error [EAST0372009]: variable `one` shadowed by
    --> compiler-test:5:5
     |
   5 |     mapping one: field => field;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

DCE_DISABLED:
Error [EAST0372009]: variable `one` shadowed by
    --> compiler-test:5:5
     |
   5 |     mapping one: field => field;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
